web/src/app/projects/[slug]/_components/sections/projectHeader.module.css
.projectHero {
  .header {
    .headerContent {
      padding-bottom: 1rem;
      .hl {
        padding-block: 0;
      }
    }

    .imgWrapper {
      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);

      img {
        display: block;
        width: 100%;
        height: auto;
      }
    }
  }
  .content {
    .detailsList {
      list-style: none;

      .detailsItem {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        gap: 1rem;
        width: 100%;
        padding-block: 0.25rem;
        padding-inline: 1rem;
        background-color: rgba(0, 0, 0, 0.2);
        margin-bottom: 2px;

        .itemLink {
          display: flex;
          flex-direction: row;
          justify-content: flex-start;
          gap: 1rem;
          width: 100%;

          .itemIcon,
          .itemText {
            cursor: pointer;
            position: relative;
          }
        }

        .itemIcon {
          font-size: 1.25rem;
          display: flex;
          align-items: center;
        }
        .itemText {
          padding-block: 0.25rem;
          font-size: 1rem;
          max-width: 600px;
          width: 100%;
        }
      }

      .detailsItem:has(.itemLink) {
        background-color: rgba(0, 0, 0, 0.4);
      }

      .detailsItem:has(.itemLink):hover {
        background-color: rgba(0, 0, 0, 0.3);
        transition: background-color 0.2s ease;
      }
    }
  }
}

